--- a/style.css
+++ b/style.css
@@ -1,6 +1,41 @@
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+
+
+
+.hero {
+  position: relative;
+  height: calc(100dvh + 600px);
+}
+
+.tunel {
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: auto;
+  height: 100dvh;
+}
+
+.logo {
+  position: fixed;
+  left: 50.5dvw;
+  top: 59.7dvh;
+  transform: translate(-50%, 0);
+  width: auto;
+  height: 2dvh;
+  opacity: 0;
+}
+
+.ojos{
+  position: fixed;
+  left: 50.5dvw;
+  top: 57dvh;
+  transform: translate(-50%, 0);
+  width: auto;
+  height: 2dvh;
+  opacity: 0.05;
 }
